mainStyle.css
/***** Universal *****/
html{
    scroll-behavior: smooth;
}

body{
    /*position: relative;*/

}

.custom-navbar{
    background-color: #1f1f1f !important;
}


#brand-img{
    width: 2em;
    height: 2em;
}

.page-title{
    
}

.normalText{
    font-family: 'Times New Roman', serif;
    color: white !important;
}

.background{
    /*background-color: #ffff4d;*/
    background-color: #262626;
    /*background-image: linear-gradient(-15deg, #1f1f1f, #ffff4d);*/
    color: white;
}

.content-body{
    /*background: rgba(0,0,0, 0.3);*/
    margin-top: 4em;
}

.btnDesign{
    background-color: yellow;
    color: black;
    cursor: pointer; /* Add a mouse pointer on hover */
    padding: 15px; /* Some padding */
    border-radius: 10px; /* Rounded corners */
}

.accompanyingImages{
    width: 100px;
    height: 100px;
}

.topIcon{
  position: fixed; /* Fixed/sticky position */
  bottom: 20px; /* Place the button at the bottom of the page */
  right: 30px; /* Place the button 30px from the right */
  z-index: 99; /* Make sure it does not overlap */
  border: none; /* Remove borders */
  outline: none; /* Remove outline */
  background-color:yellow; /* Set a background color */
  color: black; /* Text color */
  cursor: pointer; /* Add a mouse pointer on hover */
  padding: 15px; /* Some padding */
  border-radius: 10px; /* Rounded corners */
  font-size: 18px; /* Increase font size */
}

.piccol{
    padding: auto;
}


/***** Universal End *****/

/***** intro section *****/
#intro{
    margin-top: 50px;
}

.intro-row{
    height: 40%;
    background-image: linear-gradient(-15deg, #1f1f1f, #ffff4d);
    color: black;
    
}

.intro-text-col{
    /*text-align: center;*/
    padding: 5em 1em 1em 5em;
}

.intro-img-col{
    text-align: center;
    padding: 1em;
}

.profile-img{
    width: 100%;
    height: auto;
    border-radius: 50%;
}


#downBtn{
  z-index: 99; /* Make sure it does not overlap */
  border: none; /* Remove borders */
  outline: none; /* Remove outline */
  border-radius: 50%;
  left: 50%;
  /*background-color: red; /* Set a background color */
  /*color: white; /* Text color */
}


/***** intro section *****/

/***** about section *****/
#about{
    padding-top: 70px;
}

.school{
    font-weight: bold;
}


/***** about section *****/


/***** experience section *****/
#experience{
    padding-top: 70px;
}
/***** experience section *****/

/***** project section *****/
#projects{
    padding-top: 70px;
}
/***** project section *****/




/***** footer section *****/
.page-footer{
    height: 30%;
}


.footer-body{
    background-color: #1f1f1f;
}
/***** footer section *****/



/* Responsive Media Queries */
/* Extra small devices (portrait phones, less than 576px)
// No media query for `xs` since this is the default in Bootstrap*/

/* Small devices (landscape phones, 576px and up)*/
@media (min-width: 576px) { 
    .intro-row{
        
    }
 }

/* Medium devices (tablets, 768px and up)*/
@media (min-width: 768px) { 
    .intro-row{
        
    }
 }

/* Large devices (desktops, 992px and up)*/
@media (min-width: 992px) { 
    .intro-row{

    }
 }

/* Extra large devices (large desktops, 1200px and up)*/
@media (min-width: 1200px) { 
    .intro-row{

    }
 }

